--- a/concourse/pipelines/guest-package-build.yaml
+++ b/concourse/pipelines/guest-package-build.yaml
@@ -53,6 +53,7 @@ jobs:
           repo-name: guest-agent
           version: ((.:package-version))
           gcs_path: gs://gcp-guest-package-uploads/guest-agent
+          git_ref: master
       - task: guest-package-build-guest-agent-el7
         file: guest-test-infra/concourse/tasks/guest-package-build.yaml
         vars:
@@ -60,6 +61,7 @@ jobs:
           repo-name: guest-agent
           version: ((.:package-version))
           gcs_path: gs://gcp-guest-package-uploads/guest-agent
+          git_ref: master
       - task: guest-package-build-guest-agent-el8
         file: guest-test-infra/concourse/tasks/guest-package-build.yaml
         vars:
@@ -67,6 +69,7 @@ jobs:
           repo-name: guest-agent
           version: ((.:package-version))
           gcs_path: gs://gcp-guest-package-uploads/guest-agent
+          git_ref: master
       - task: guest-package-build-guest-agent-goo
         file: guest-test-infra/concourse/tasks/guest-package-build.yaml
         vars:
@@ -74,6 +77,7 @@ jobs:
           repo-name: guest-agent
           version: ((.:package-version))
           gcs_path: gs://gcp-guest-package-uploads/guest-agent
+          git_ref: master
   - put: guest-agent-tag
     params:
       name: package-version/version
@@ -141,6 +145,7 @@ jobs:
           repo-name: guest-oslogin
           version: ((.:package-version))
           gcs_path: gs://gcp-guest-package-uploads/oslogin
+          git_ref: master
       - task: guest-package-build-guest-oslogin-deb10
         file: guest-test-infra/concourse/tasks/guest-package-build.yaml
         vars:
@@ -148,6 +153,7 @@ jobs:
           repo-name: guest-oslogin
           version: ((.:package-version))
           gcs_path: gs://gcp-guest-package-uploads/oslogin
+          git_ref: master
       - task: guest-package-build-guest-oslogin-deb11
         file: guest-test-infra/concourse/tasks/guest-package-build.yaml
         vars:
@@ -155,6 +161,7 @@ jobs:
           repo-name: guest-oslogin
           version: ((.:package-version))
           gcs_path: gs://gcp-guest-package-uploads/oslogin
+          git_ref: master
       - task: guest-package-build-guest-oslogin-el7
         file: guest-test-infra/concourse/tasks/guest-package-build.yaml
         vars:
@@ -162,6 +169,7 @@ jobs:
           repo-name: guest-oslogin
           version: ((.:package-version))
           gcs_path: gs://gcp-guest-package-uploads/oslogin
+          git_ref: master
       - task: guest-package-build-guest-oslogin-el8
         file: guest-test-infra/concourse/tasks/guest-package-build.yaml
         vars:
@@ -169,6 +177,7 @@ jobs:
           repo-name: guest-oslogin
           version: ((.:package-version))
           gcs_path: gs://gcp-guest-package-uploads/oslogin
+          git_ref: master
   - put: guest-oslogin-tag
     params:
       name: package-version/version
@@ -204,7 +213,6 @@ jobs:
       - task: inject-guest-oslogin-el8
         file: guest-test-infra/concourse/tasks/gcloud-inject-package.yaml
         vars:
-          gcs_path: gs://gcp-guest-package-uploads/oslogin
           package_path: oslogin/google-compute-engine-oslogin-((.:package-version))-g1.el8.x86_64.rpm
           universe: cloud-yum
           repo: gce-google-compute-engine-oslogin-el8
@@ -237,6 +245,7 @@ jobs:
           repo-name: osconfig
           version: ((.:package-version))
           gcs_path: gs://gcp-guest-package-uploads/osconfig
+          git_ref: master
       - task: guest-package-build-osconfig-el7
         file: guest-test-infra/concourse/tasks/guest-package-build.yaml
         vars:
@@ -244,6 +253,7 @@ jobs:
           repo-name: osconfig
           version: ((.:package-version))
           gcs_path: gs://gcp-guest-package-uploads/osconfig
+          git_ref: master
       - task: guest-package-build-osconfig-el8
         file: guest-test-infra/concourse/tasks/guest-package-build.yaml
         vars:
@@ -251,6 +261,7 @@ jobs:
           repo-name: osconfig
           version: ((.:package-version))
           gcs_path: gs://gcp-guest-package-uploads/osconfig
+          git_ref: master
       - task: guest-package-build-osconfig-goo
         file: guest-test-infra/concourse/tasks/guest-package-build.yaml
         vars:
@@ -258,6 +269,7 @@ jobs:
           repo-name: osconfig
           version: ((.:package-version))
           gcs_path: gs://gcp-guest-package-uploads/osconfig
+          git_ref: master
   - put: osconfig-tag
     params:
       name: package-version/version
@@ -319,6 +331,7 @@ jobs:
           repo-name: guest-diskexpand
           version: ((.:package-version))
           gcs_path: gs://gcp-guest-package-uploads/gce-disk-expand
+          git_ref: master
       - task: guest-package-build-guest-diskexpand-el7
         file: guest-test-infra/concourse/tasks/guest-package-build.yaml
         vars:
@@ -326,6 +339,7 @@ jobs:
           repo-name: guest-diskexpand
           version: ((.:package-version))
           gcs_path: gs://gcp-guest-package-uploads/gce-disk-expand
+          git_ref: master
       - task: guest-package-build-guest-diskexpand-el8
         file: guest-test-infra/concourse/tasks/guest-package-build.yaml
         vars:
@@ -333,6 +347,7 @@ jobs:
           repo-name: guest-diskexpand
           version: ((.:package-version))
           gcs_path: gs://gcp-guest-package-uploads/gce-disk-expand
+          git_ref: master
   - put: guest-diskexpand-tag
     params:
       name: package-version/version
@@ -385,6 +400,7 @@ jobs:
         file: guest-test-infra/concourse/tasks/guest-package-build.yaml
         vars:
           gcs_path: gs://gcp-guest-package-uploads/google-compute-engine
+          git_ref: master
           repo-name: guest-configs
           version: ((.:package-version))
           wf: build_deb9.wf.json
@@ -392,6 +408,7 @@ jobs:
         file: guest-test-infra/concourse/tasks/guest-package-build.yaml
         vars:
           gcs_path: gs://gcp-guest-package-uploads/google-compute-engine
+          git_ref: master
           repo-name: guest-configs
           version: ((.:package-version))
           wf: build_el7.wf.json
@@ -399,6 +416,7 @@ jobs:
         file: guest-test-infra/concourse/tasks/guest-package-build.yaml
         vars:
           gcs_path: gs://gcp-guest-package-uploads/google-compute-engine
+          git_ref: master
           repo-name: guest-configs
           version: ((.:package-version))
           wf: build_el8.wf.json
@@ -428,6 +446,102 @@ jobs:
           package_path: google-compute-engine/google-compute-engine-((.:package-version))-g1.el8.noarch.rpm
           universe: cloud-yum
           repo: gce-google-compute-engine-el8
+
+- name: build-artifact-registry-el-plugins
+  plan:
+  - get: artifact-registry-yum-plugin
+    trigger: true
+    params:
+      skip_download: true
+  - load_var: commit-sha
+    file: artifact-registry-yum-plugin/.git/ref
+  - get: guest-test-infra
+  - task: get-credential
+    file: guest-test-infra/concourse/tasks/get-credential.yaml
+  - task: get-github-token
+    file: guest-test-infra/concourse/tasks/get-github-token.yaml
+  - task: generate-package-version
+    file: guest-test-infra/concourse/tasks/generate-package-version.yaml
+    input_mapping: {repo: artifact-registry-yum-plugin}
+  - load_var: package-version
+    file: package-version/version
+  - in_parallel:
+      fail_fast: true
+      steps:
+      - task: guest-package-build-artifact-registry-yum-plugin-el7
+        file: guest-test-infra/concourse/tasks/guest-package-build.yaml
+        vars:
+          gcs_path: gs://gcp-guest-package-uploads/yum-plugin-artifact-registry
+          git_ref: main
+          repo-name: artifact-registry-yum-plugin
+          version: ((.:package-version))
+          wf: build_el7.wf.json
+      - task: guest-package-build-artifact-registry-yum-plugin-el8
+        file: guest-test-infra/concourse/tasks/guest-package-build.yaml
+        vars:
+          gcs_path: gs://gcp-guest-package-uploads/dnf-plugin-artifact-registry
+          git_ref: main
+          repo-name: artifact-registry-yum-plugin
+          version: ((.:package-version))
+          wf: build_el8.wf.json
+  - put: artifact-registry-yum-plugin-tag
+    params:
+      name: package-version/version
+      tag: package-version/version
+      commitish: artifact-registry-yum-plugin/.git/ref
+  - in_parallel:
+      fail_fast: true
+      steps:
+      - task: inject-artifact-registry-yum-plugin-el7-unstable
+        file: guest-test-infra/concourse/tasks/gcloud-inject-package.yaml
+        vars:
+          package_path: yum-plugin-artifact-registry/yum-plugin-artifact-registry-((.:package-version))-g1.el7.noarch.rpm
+          universe: cloud-yum
+          repo: yum-plugin-artifact-registry
+      - task: inject-artifact-registry-dnf-plugin-el8-unstable
+        file: guest-test-infra/concourse/tasks/gcloud-inject-package.yaml
+        vars:
+          package_path: yum-plugin-artifact-registry/dnf-plugin-artifact-registry-((.:package-version))-g1.el8.noarch.rpm
+          universe: cloud-yum
+          repo: dnf-plugin-artifact-registry
+
+- name: build-artifact-registry-apt-transport
+  plan:
+  - get: artifact-registry-apt-transport
+    trigger: true
+    params:
+      skip_download: true
+  - load_var: commit-sha
+    file: artifact-registry-apt-transport/.git/ref
+  - get: guest-test-infra
+  - task: get-credential
+    file: guest-test-infra/concourse/tasks/get-credential.yaml
+  - task: get-github-token
+    file: guest-test-infra/concourse/tasks/get-github-token.yaml
+  - task: generate-package-version
+    file: guest-test-infra/concourse/tasks/generate-package-version.yaml
+    input_mapping: {repo: artifact-registry-apt-transport}
+  - load_var: package-version
+    file: package-version/version
+  - task: guest-package-build-artifact-registry-apt-transport-deb9
+    file: guest-test-infra/concourse/tasks/guest-package-build.yaml
+    vars:
+      gcs_path: gs://gcp-guest-package-uploads/apt-transport-artifact-registry
+      git_ref: main
+      repo-name: artifact-registry-apt-transport
+      version: ((.:package-version))
+      wf: build_deb9.wf.json
+  - put: artifact-registry-apt-transport-tag
+    params:
+      name: package-version/version
+      tag: package-version/version
+      commitish: artifact-registry-apt-transport/.git/ref
+  - task: inject-artifact-registry-apt-transport-unstable
+    file: guest-test-infra/concourse/tasks/gcloud-inject-package.yaml
+    vars:
+      package_path: apt-transport-artifact-registry/apt-transport-artifact-registry_((.:package-version))-g1_all.deb
+      universe: cloud-apt
+      repo: apt-transport-artifact-registry
 
 resources:
 - name: guest-agent
@@ -489,6 +603,30 @@ resources:
   source:
     owner: GoogleCloudPlatform
     repository: guest-configs
+    access_token: ((github-token.token))
+- name: artifact-registry-yum-plugin
+  type: git
+  source:
+    uri: https://github.com/GoogleCloudPlatform/artifact-registry-yum-plugin.git
+    branch: main
+    fetch_tags: true
+- name: artifact-registry-yum-plugin-tag
+  type: github-release
+  source:
+    owner: GoogleCloudPlatform
+    repository: artifact-registry-yum-plugin
+    access_token: ((github-token.token))
+- name: artifact-registry-apt-transport
+  type: git
+  source:
+    uri: https://github.com/GoogleCloudPlatform/artifact-registry-apt-transport.git
+    branch: main
+    fetch_tags: true
+- name: artifact-registry-apt-transport-tag
+  type: github-release
+  source:
+    owner: GoogleCloudPlatform
+    repository: artifact-registry-apt-transport
     access_token: ((github-token.token))
 - name: guest-test-infra
   type: git
