--- a/concourse/tasks/daisy-build-images.yaml
+++ b/concourse/tasks/daisy-build-images.yaml
@@ -4,7 +4,7 @@ image_resource:
   type: docker-image
   source:
     repository: gcr.io/compute-image-tools/daisy
-    tag: release
+    tag: latest
 
 inputs:
 - name: compute-image-tools
