--- a/concourse/tasks/daisy-publish-images.yaml
+++ b/concourse/tasks/daisy-publish-images.yaml
@@ -4,7 +4,7 @@ image_resource:
   type: docker-image
   source:
     repository: gcr.io/compute-image-tools/gce_image_publish
-    tag: release
+    tag: latest
 
 inputs:
 - name: compute-image-tools
